# xarray-sql-duckdb

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
docs/: DESIGN.md  NEXT_README.md  README.md  SIMPLIFIED_DESIGN.md  ralph-loop-prompt.md
issues/3d94c38a-56bc-4b06-b97d-cd74e18073c0/: issue.json
issues/a3d586dc-e599-4627-9cc1-d643d6cca645/: issue.json
issues/a71f9910-e9cd-43f3-8564-913a4d2a52f2/: issue.json
src/: xql_extension.cpp  zarr_extension.cpp  zarr_metadata.cpp  zarr_scan.cpp
src/include/: xql_extension.hpp  zarr_extension.hpp  zarr_metadata.hpp  zarr_scan.hpp
src/include/zarr/: chunk.hpp  metadata.hpp  pivot.hpp  table_function.hpp
src/zarr/: arrow_pivot.hpp  chunk.cpp  metadata.cpp  pivot.cpp  table_function.cpp
swarm/: plan.json
swarm/phases/: phase-1.json  phase-2.json  phase-3.json
test/: README.md
test/sql/: zarr.test
